# TaskExampleC

./: CMakeLists.txt  LICENSE  README.md
inc/oik/: portable.h
inc/oik/portable/: ifp_cfs.h  ifp_cfssec.h  ifp_cftree.h  ifp_darwin.h  ifp_ini.h  ifp_linux.h  ifp_logmsg.h  ifp_windows.h  pc_werr.h
inc/oik/portable/posix/: pos_handle.h
inc/oik/tmconn/: tmconn.h  tmconn_tqi.h
links/: libif_cfs.lib
src/: main.c
